@@ -9,8 +9,12 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://github.com/stackless-dev/stackless/issues/186
+  Make Stackless compatible with subinterpreters. Previously creating a
+  subinterpreter in one thread and using it in another thread caused a crash.
+
 - https://github.com/stackless-dev/stackless/issues/182
-  Fix "make teststackless" for out of tree builds
+  Fix "make teststackless" for out of tree builds.
 
 - https://github.com/stackless-dev/stackless/issues/180
   Deprecate stackless.pickle_with_tracing_state. It has been replaced by
